--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,10 @@
   "dependencies": {
     "jquery": "2.0.x",
     "lodash": "2.x.x",
-    "moment": "2.7.x"
+    "moment": "2.7.x",
+    "cartograph": "x.x.x",
+    "eventspitter": "x.x.x",
+    "loud-accessors": "x.x.x",
+    "submachine": "x.x.x"
   }
 }
