--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "grunt-karma": "~0.8.3",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-curl": "~1.5.1",
-    "grunt-release": "~0.7.0"
+    "grunt-release": "~0.7.0",
+    "karma-phantomjs-launcher": "~0.1.4"
   },
   "licenses": [
     {
@@ -39,5 +40,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dawanda/lanejs/issues"
+  },
+  "scripts": {
+    "test": "grunt travis --verbose"
   }
 }
