--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "karma-coffee-preprocessor": "~0.2.1",
     "karma-sinon-chai": "~0.1.6",
     "grunt": "~0.4.5",
+    "grunt-cli": "~0.1.13",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-uglify": "~0.4.0",
