--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "karma-coffee-preprocessor": "~0.2.1",
     "karma-sinon-chai": "~0.1.6",
     "grunt": "~0.4.5",
-    "grunt-cli": "~0.1.13",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-uglify": "~0.4.0",
@@ -21,7 +20,8 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-curl": "~1.5.1",
     "grunt-release": "~0.7.0",
-    "karma-phantomjs-launcher": "~0.1.4"
+    "karma-phantomjs-launcher": "~0.1.4",
+    "bower": "~1.3.8"
   },
   "licenses": [
     {
