--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-curl": "~1.5.1",
     "grunt-release": "~0.7.0",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "bower": "~1.3.8"
+    "karma-phantomjs-launcher": "~0.1.4"
   },
   "licenses": [
     {
