--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
 node_js:
   - 0.10
-before_install: npm install -g grunt-cli && npm install -g bower@1.3.8
-install: npm install
+before_install: npm install -g grunt-cli
+install: npm cache clear && npm install
