--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: node_js
 node_js:
   - 0.10
 before_install: npm install -g grunt-cli
-install: npm cache clear && npm install
+install: npm install
