--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "grunt-curl": "~1.5.1",
     "grunt-release": "~0.7.0",
     "karma-phantomjs-launcher": "~0.1.4",
-    "bower": "~1.3.8"
+    "tmp": "0.0.23"
   },
   "licenses": [
     {
