--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "2.x.x",
+    "jquery": ">=2.0.0",
     "lodash": "2.x.x",
     "moment": "2.7.x",
     "cartograph": "0.1.x",
