--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "main": "./dist/lanejs.js",
   "author": "DaWanda GmbH",
   "devDependencies": {
-    "karma": "~0.12.16",
-    "karma-chrome-launcher": "~0.1.4",
-    "karma-jasmine": "~0.2.2",
-    "karma-coffee-preprocessor": "~0.2.1",
-    "karma-sinon-chai": "~0.1.6",
     "grunt": "~0.4.5",
+    "grunt-bower-task": "~0.3.4",
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-jasmine": "~0.8.2",
-    "grunt-bower-task": "~0.3.4",
-    "grunt-karma": "~0.8.3",
-    "grunt-contrib-clean": "~0.5.0",
     "grunt-curl": "~1.5.1",
+    "grunt-karma": "~0.8.3",
     "grunt-release": "~0.7.0",
+    "karma": "~0.12.16",
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-coffee-preprocessor": "~0.2.1",
+    "karma-jasmine": "~0.2.2",
     "karma-phantomjs-launcher": "~0.1.4",
+    "karma-sinon-chai": "~0.1.6",
     "tmp": "0.0.23"
   },
   "licenses": [
