--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-jasmine": "~0.8.2",
     "grunt-bower-task": "~0.3.4",
     "grunt-karma": "~0.8.3",
     "grunt-contrib-clean": "~0.5.0",
