--- a/package.json
+++ b/package.json
@@ -45,5 +45,14 @@
   },
   "scripts": {
     "test": "grunt travis --verbose"
+  },
+  "dependencies": {
+    "jquery": ">=2.0.0",
+    "lodash": "3.5.0",
+    "moment": "2.7.x",
+    "cartograph": "^0.1.7",
+    "eventspitter": "0.x.x",
+    "loud-accessors": "0.x.x",
+    "submachine": "0.1.x"
   }
 }
